[gd_scene load_steps=19 format=2]

[ext_resource path="res://fonts/ORIOND.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://create_class.gd" type="Script" id=2]
[ext_resource path="res://enroll.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=14]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 1 )

[node name="create_class" type="Node2D"]
script = ExtResource( 2 )

[node name="class" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 768.0
color = Color( 0.168627, 0.176471, 0.231373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_create_class" type="Label" parent="class"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -682.0
margin_top = -699.0
margin_right = -359.0
margin_bottom = -658.0
custom_fonts/font = SubResource( 1 )
text = "CREATE CLASS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_class_name" type="Label" parent="class"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -858.0
margin_top = -605.0
margin_right = -719.0
margin_bottom = -564.0
custom_fonts/font = SubResource( 2 )
text = "Class Name : "
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="class_name" type="LineEdit" parent="class/label_class_name"]
margin_left = 153.0
margin_top = 5.0
margin_right = 753.0
margin_bottom = 35.0
rect_min_size = Vector2( 600, 25 )
custom_fonts/font = SubResource( 3 )
max_length = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_class_code" type="Label" parent="class"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -858.0
margin_top = -557.0
margin_right = -719.0
margin_bottom = -516.0
custom_fonts/font = SubResource( 5 )
text = "Class Code : "
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="class_code" type="LineEdit" parent="class/label_class_code"]
margin_left = 153.0
margin_top = 5.0
margin_right = 753.0
margin_bottom = 35.0
rect_min_size = Vector2( 600, 25 )
custom_fonts/font = SubResource( 6 )
max_length = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_class_description" type="Label" parent="class"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -907.0
margin_top = -509.0
margin_right = -719.0
margin_bottom = -468.0
custom_fonts/font = SubResource( 7 )
text = "Class Description : "
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="class_desc" type="TextEdit" parent="class"]
margin_left = 319.0
margin_top = 264.0
margin_right = 919.0
margin_bottom = 414.0
rect_min_size = Vector2( 600, 150 )
custom_fonts/font = SubResource( 3 )
fold_gutter = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_grade_level" type="Label" parent="class"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -858.0
margin_top = -293.0
margin_right = -719.0
margin_bottom = -252.0
custom_fonts/font = SubResource( 8 )
text = "Grade Level : "
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grade_level" type="OptionButton" parent="class/label_grade_level"]
margin_left = 154.0
margin_top = 6.0
margin_right = 214.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 4 )
text = "7"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="label_teacher" type="Label" parent="class"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -936.0
margin_top = -341.0
margin_right = -719.0
margin_bottom = -300.0
custom_fonts/font = SubResource( 9 )
text = "Teacher's ID Number : "
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="teacher_id" type="LineEdit" parent="class/label_teacher"]
margin_left = 231.0
margin_top = 5.0
margin_right = 831.0
margin_bottom = 35.0
rect_min_size = Vector2( 600, 25 )
custom_fonts/font = SubResource( 3 )
max_length = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_section" type="Label" parent="class"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -554.0
margin_top = -293.0
margin_right = -415.0
margin_bottom = -252.0
custom_fonts/font = SubResource( 10 )
text = "Section :  "
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="section" type="LineEdit" parent="class/label_section"]
margin_left = 145.0
margin_top = 5.0
margin_right = 449.0
margin_bottom = 35.0
rect_min_size = Vector2( 304, 25 )
custom_fonts/font = SubResource( 11 )
max_length = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_sched" type="Label" parent="class"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -858.0
margin_top = -245.0
margin_right = -719.0
margin_bottom = -204.0
custom_fonts/font = SubResource( 8 )
text = "Schedule : "
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sched_from" type="OptionButton" parent="class/label_sched"]
margin_left = 154.0
margin_top = 6.0
margin_right = 274.0
margin_bottom = 32.0
rect_min_size = Vector2( 120, 0 )
custom_fonts/font = SubResource( 12 )
text = "7:30AM"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="dash" type="Label" parent="class/label_sched"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 153.0
margin_top = -41.0
margin_right = 160.0
custom_fonts/font = SubResource( 8 )
text = "-"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sched_to" type="OptionButton" parent="class/label_sched"]
margin_left = 322.0
margin_top = 6.0
margin_right = 442.0
margin_bottom = 32.0
rect_min_size = Vector2( 120, 0 )
custom_fonts/font = SubResource( 13 )
text = "8:30AM"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="next" type="Button" parent="class"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 273.0
margin_top = 250.0
margin_right = 407.0
margin_bottom = 297.0
custom_fonts/font = SubResource( 14 )
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enroll" type="ColorRect" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 768.0
color = Color( 0.168627, 0.176471, 0.231373, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_create_class" type="Label" parent="enroll"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -682.0
margin_top = -699.0
margin_right = -359.0
margin_bottom = -658.0
custom_fonts/font = SubResource( 1 )
text = "ADD STUDENTS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_student_id" type="Label" parent="enroll"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -858.0
margin_top = -605.0
margin_right = -719.0
margin_bottom = -564.0
custom_fonts/font = SubResource( 2 )
text = "Student ID : "
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="student_id" type="LineEdit" parent="enroll/label_student_id"]
margin_left = 153.0
margin_top = 5.0
margin_right = 453.0
margin_bottom = 35.0
rect_min_size = Vector2( 300, 25 )
custom_fonts/font = SubResource( 3 )
max_length = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="add" type="Button" parent="enroll"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 114.0
margin_top = -215.0
margin_right = 182.0
margin_bottom = -187.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = SubResource( 14 )
text = "Add"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_enrolled" type="Label" parent="enroll"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -907.0
margin_top = -558.0
margin_right = -719.0
margin_bottom = -517.0
custom_fonts/font = SubResource( 7 )
text = "Enrolled : "
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enrolled" type="TextEdit" parent="enroll/label_enrolled"]
margin_left = 202.0
margin_top = 5.0
margin_right = 502.0
margin_bottom = 345.0
rect_min_size = Vector2( 300, 300 )
custom_fonts/font = SubResource( 3 )
readonly = true
fold_gutter = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back2" type="Button" parent="enroll"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 273.0
margin_top = 194.0
margin_right = 407.0
margin_bottom = 241.0
custom_fonts/font = SubResource( 14 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="create" type="Button" parent="enroll"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 273.0
margin_top = 250.0
margin_right = 407.0
margin_bottom = 297.0
custom_fonts/font = SubResource( 14 )
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_remove" type="Label" parent="enroll"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -907.0
margin_top = -201.0
margin_right = -719.0
margin_bottom = -160.0
custom_fonts/font = SubResource( 7 )
text = "Remove : "
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="remove_id" type="OptionButton" parent="enroll/label_remove"]
margin_left = 203.0
margin_top = 6.0
margin_right = 502.0
margin_bottom = 31.0
rect_min_size = Vector2( 0, 25 )
custom_fonts/font = SubResource( 15 )

[node name="add2" type="Button" parent="enroll/label_remove"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 415.0
margin_top = -16.5
margin_right = 483.0
margin_bottom = 11.5
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = SubResource( 14 )
text = "Remove"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="class/label_sched/sched_from" to="." method="_on_sched_from_item_selected"]
[connection signal="item_selected" from="class/label_sched/sched_to" to="." method="_on_sched_to_item_selected"]
[connection signal="pressed" from="class/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="enroll/add" to="enroll" method="_on_back_pressed"]
[connection signal="pressed" from="enroll/back2" to="." method="_on_back2_pressed"]
